# quant-warehouse

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  environment.yml  pyproject.toml
notebook/data_providers/fmp/: crypto.ipynb  currencies.ipynb  macro.ipynb
notebooks/: build_option_ml_dataset.py  download_thetadata_option_snapshots.py  thetadata_option_label_sample.py
notebooks/computation_libraries/: financetoolkit.ipynb  financetoolkit_feature_family_predictive_power.ipynb  global_fundamental_feature_family_predictive_power.ipynb  ortools.ipynb  pandas_ta_classic.ipynb  scipy.ipynb  vector_ta.ipynb  vectoralpha.ipynb
notebooks/data_providers/: fmp_data_overview.ipynb
notebooks/data_providers/fmp/: crypto.ipynb  currencies.ipynb  equities.ipynb  etfs.ipynb  evidence_based_daily_adjusted_fundamentals.ipynb  income_mcap_ratios.ipynb  indexes.ipynb  macro.ipynb  mutual_funds.ipynb  statements_mcap_ratios.ipynb
notebooks/target_engineering/: feature_family_binary_target_matrix.ipynb  smart_money_event_analysis.ipynb
quant_warehouse/: __init__.py  cli.py  config.py  deps.py
quant_warehouse/catalog/: __init__.py  country.py  listing_date.py  store.py
quant_warehouse/export/: __init__.py  panels.py
quant_warehouse/feature_engineering/: __init__.py  broadcast.py  fundamental_features.py  fundamentals.py  recipe.py  ta_classic_technical.py  technical.py  time_features.py
quant_warehouse/features/: __init__.py  broadcast.py  recipe.py
quant_warehouse/ingest/: __init__.py  credentials.py  django_historical.py  django_prices.py  django_symbols.py  equity_calendar_fetch.py  etf_universe.py  macro_fetch.py  normalize.py  openbb_fetch.py  providers.py  screener_fetch.py
quant_warehouse/migrate/: __init__.py  backfill_fixes.py  backfill_fmp_all.py  backfill_macro_alt.py  backfill_missing_fmp.py  backfill_thetadata_options.py  django_historical.py  django_prices.py  provider_storage.py  separate_etfs.py  separate_fundamentals.py  universe.py
quant_warehouse/refresh/: __init__.py  parallel.py  planner.py  screener.py  universe.py
quant_warehouse/research_tools/: __init__.py  event_feature_dataset.py  feature_family_eval.py  target_family_eval.py
quant_warehouse/target_engineering/: __init__.py  labels.py  operations.py  option_dataset.py  option_labels.py  strategy_solver.py  thetadata_loader.py
quant_warehouse/target_engineering/event_pairs/: __init__.py  classifiers.py  event_pair_normalizer.py  fmp_fetch.py  store.py
quant_warehouse/target_engineering/optimal_trades/: __init__.py  optimal_trade_labels.py
quant_warehouse/target_engineering/options/: __init__.py  option_best_return.py  option_return_rank.py
quant_warehouse/target_engineering/returns/: __init__.py  cross_sectional_rank.py
quant_warehouse/warehouse/: __init__.py  api.py  backend.py  equity_calendar.py  etf.py  fundamentals.py  macro.py  market_prices.py  merge.py  prices.py  profile.py  sections.py  storage.py
research/: build_option_ml_dataset.py  download_thetadata_option_snapshots.py  options_provider_eda.py  thetadata_option_label_sample.py
scripts/: install_vector_ta_cuda.sh
tests/: conftest.py  test_backend.py  test_backfill_thetadata_options.py  test_catalog.py  test_credentials.py  test_django_historical.py  test_django_prices.py  test_django_symbols.py  test_equity_calendar.py  test_etf_composition.py  test_event_feature_dataset.py  test_feature_engineering.py  test_feature_engineering_benchmark.py  test_feature_engineering_fundamentals.py  test_fundamentals.py  test_macro_fetch.py  test_macro_store.py  test_market_prices.py  test_merge.py  test_openbb_fetch_empty.py  test_pit.py  test_prices.py  test_profile.py  test_provider_storage_migration.py  test_refresh_parallel.py  test_refresh_planner.py  test_refresh_universe.py  test_research_feature_family_eval.py  test_research_target_family_eval.py  test_screener.py  test_storage_policy.py  test_target_engineering_labels.py  test_target_engineering_option_labels.py  test_target_engineering_requested_targets.py  test_target_engineering_strategy_solver.py  test_thetadata_loader.py  test_thetadata_option_features.py
tools/: benchmark_feature_engineering.py  benchmark_thetadata_write_strategy.py  migrate_yfinance_provider_storage.py
