[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quant-warehouse"
version = "0.1.0"
description = "Multi-vendor point-in-time market data and features for ML and backtesting."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Quant Warehouse" }]
keywords = ["quant", "finance", "openbb", "arcticdb", "feature-store", "point-in-time"]
dependencies = [
    "numpy>=1.26,<2.5",
    "pandas>=2.1,<3",
    "protobuf<7",
    "financetoolkit>=2.1,<3",
    "ortools>=9.12,<10",
    "pandas-ta-classic @ git+https://github.com/quantarb/pandas-ta-classic.git@main",
    "pyarrow>=14.0",
    "scipy>=1.14,<2",
    "thetadata>=1.0.9",
    "vector-ta>=0.2.8,<0.3",
    "openbb @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform",
    "openbb-core @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/core",
    "openbb-fmp @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/providers/fmp",
    "openbb-yfinance @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/providers/yfinance",
    "openbb-sec @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/providers/sec",
    "openbb-tiingo @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/providers/tiingo",
    "openbb-intrinio @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/providers/intrinio",
    "openbb-equity @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/extensions/equity",
    "openbb-etf @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/extensions/etf",
    "openbb-crypto @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/extensions/crypto",
    "openbb-currency @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/extensions/currency",
    "openbb-derivatives @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/extensions/derivatives",
    "openbb-economy @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/extensions/economy",
    "openbb-index @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/extensions/index",
    "openbb-news @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/extensions/news",
    "openbb-regulators @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/extensions/regulators",
    "openbb-fred @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/providers/fred",
    "openbb-bls @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/providers/bls",
    "openbb-oecd @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/providers/oecd",
    "openbb-tradingeconomics @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/providers/tradingeconomics",
    "openbb-government-us @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/providers/government_us",
    "openbb-federal-reserve @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/providers/federal_reserve",
    "openbb-fixedincome @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/extensions/fixedincome",
    "openbb-commodity @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/extensions/commodity",
    "openbb-benzinga @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/providers/benzinga",
    "openbb-congress-gov @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/providers/congress_gov",
    "openbb-cftc @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/providers/cftc",
    "openbb-imf @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/providers/imf",
    "openbb-us-eia @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/providers/eia",
    "openbb-econdb @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/providers/econdb",
    "openbb-platform-api @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/extensions/platform_api",
    "openbb-thetadata @ git+https://github.com/quantarb/OpenBB.git@develop#subdirectory=openbb_platform/providers/thetadata",
    # PyPI wheels: Linux x86_64, macOS, Windows. Linux arm64 → conda-forge only.
    'arcticdb>=5.0; platform_machine != "aarch64" or sys_platform != "linux"',
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
all = ["quant-warehouse[dev]"]

[project.scripts]
quant-warehouse = "quant_warehouse.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["quant_warehouse"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
